Minor fixes on iOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,13 @@ select {
   color: #fff;
   cursor: pointer;
   padding: 6px 32px 6px 16px;
-  font-size: 12px;
+  font-size: 16px;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus, textarea:focus, input:focus {
+          font-size: 16px;
+      }
 }
 
 .select {
